--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Turkey Medicals - Antalya Bariatric Surgery Gastric Sleeve Bypass Baloon</title>
+  <title>Magenverkleinerung-Tuerkei - Bariatric Gastric Sleeve Bypass Baloon</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -13,6 +13,7 @@
       transition: transform 0.2s;
     }
   </style>
+	
 </head>
 <body class="bg-[#e6f5ea] text-[#064c26] font-sans">
 
@@ -33,9 +34,9 @@
   <!-- Hero Section -->
   <section class="relative bg-gradient-to-b from-[#b7e0c1] to-[#e6f5ea] h-[60vh] flex items-center">
     <div class="max-w-6xl mx-auto px-4 md:px-6 text-center md:text-left" data-aos="fade-down" data-aos-duration="1000">
-      <h1 class="text-3xl md:text-5xl font-extrabold mb-4 text-[#064c26]">Luxury Gastric Sleeve Surgery in Antalya</h1>
+      <h1 class="text-3xl md:text-5xl font-extrabold mb-4 text-[#064c26]">Magenverkleinerung Tuerkei ForGastric Sleeve Surgery in Antalya</h1>
       <p class="text-base md:text-lg mb-6 text-[#064c26]">
-        Turkey Medicals, MedicalPark Hospitals - Transform your health with world-class bariatric surgeons, internationally accredited hospitals,  
+       Magenverkleinerung-tuerkei.com - Transform your health with world-class bariatric surgeons, internationally accredited hospitals,  
         private recovery suites, and premium VIP care in Istanbul & Antalya.
       </p>
       <div class="flex flex-col md:flex-row gap-4 justify-center md:justify-start flex-wrap">
@@ -305,13 +306,15 @@
       <li><a href="https://internationalesthetic.net" target="_blank" rel="follow" class="hover:text-green-400 transition">internationalesthetic.net</a></li>
       <li><a href="https://dentalimplantsclinicturkey.com" target="_blank" rel="follow" class="hover:text-green-400 transition">dentalimplantsclinicturkey.com</a></li>
       <li><a href="https://antalyainternationaldentistry.com" target="_blank" rel="nollow" class="hover:text-green-400 transition">antalyainternationaldentistry.com</a></li>
-      <li><a href="https://turkishclassified.com" target="_blank" rel="nollow" class="hover:text-green-400 transition">turkishclassified.com</a></li>
+      <li><a href="https://obesitas-kliniek-turkije.nl" target="_blank" rel="nollow" class="hover:text-green-400 transition">obesitas-kliniek-turkije.nl</a></li>
       <li><a href="https://bakirkoycheckupmerkezi.com" target="_blank" rel="follow" class="hover:text-green-400 transition">bakirkoycheckupmerkezi.com</a></li>
+      <li><a href="https://doc-clinicfinder.com" target="_blank" rel="follow" class="hover:text-green-400 transition">doc-clinicfinder.com</a></li>	
+	  <li><a href="https://obesity-clinic-turkey.com" target="_blank" rel="follow" class="hover:text-green-400 transition">obesity-clinic-turkey.com</a></li>		
     </ul>
   </div>
 
   <div class="border-t border-green-400 mt-10 pt-6 text-center text-sm text-gray-300">
-    &copy; 2025 Magenverkleinerung-Tuerkei.com - All rights reserved.
+    &copy; 2026 Magenverkleinerung-Tuerkei provides educational information and patient guidance. International patient coordination and treatment facilitation are provided through Turkey Medicals in collaboration with licensed healthcare providers in Turkey. All rights reserved.
   </div>
 </footer>
 
