--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Magenverkleinerung-Tuerkei - Bariatric Gastric Sleeve Bypass Baloon</title>
+  <title>Magenverkleinerung-Tuerkei - Bariatric & Gastric Surgeries Turkey</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -34,9 +34,9 @@
   <!-- Hero Section -->
   <section class="relative bg-gradient-to-b from-[#b7e0c1] to-[#e6f5ea] h-[60vh] flex items-center">
     <div class="max-w-6xl mx-auto px-4 md:px-6 text-center md:text-left" data-aos="fade-down" data-aos-duration="1000">
-      <h1 class="text-3xl md:text-5xl font-extrabold mb-4 text-[#064c26]">Magenverkleinerung Tuerkei ForGastric Sleeve Surgery in Antalya</h1>
+      <h1 class="text-3xl md:text-5xl font-extrabold mb-4 text-[#064c26]">Magenverkleinerung Tuerkei For Gastric Sleeve & Bariatric Surgery Turkey</h1>
       <p class="text-base md:text-lg mb-6 text-[#064c26]">
-       Magenverkleinerung-tuerkei.com - Transform your health with world-class bariatric surgeons, internationally accredited hospitals,  
+       Magenverkleinerung-tuerkei.com - Transform your health with world-class weight-loss surgeons, internationally accredited hospitals,  
         private recovery suites, and premium VIP care in Istanbul & Antalya.
       </p>
       <div class="flex flex-col md:flex-row gap-4 justify-center md:justify-start flex-wrap">
