--- a/index.html
+++ b/index.html
@@ -13,7 +13,63 @@
       transition: transform 0.2s;
     }
   </style>
-	
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MedicalWebPage",
+  "@id": "https://magenverkleinerung-tuerkei.com/#medicalwebpage",
+  "name": "Magenverkleinerung Türkei",
+  "url": "https://magenverkleinerung-tuerkei.com",
+  "description": "Magenverkleinerung Türkei provides independent medical information, patient guidance, and treatment pathways for gastric sleeve and bariatric surgery procedures in Turkey.",
+  "about": {
+    "@type": "MedicalCondition",
+    "name": "Obesity",
+    "possibleTreatment": {
+      "@type": "MedicalProcedure",
+      "name": "Gastric Sleeve Surgery"
+    }
+  },
+  "mainEntity": {
+    "@type": "MedicalProcedure",
+    "name": "Schlauchmagen Operation",
+    "procedureType": "Surgical",
+    "bodyLocation": "Stomach",
+    "medicalSpecialty": "BariatricSurgery"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Magenverkleinerung Türkei",
+    "url": "https://magenverkleinerung-tuerkei.com"
+  },
+  "mentions": [
+    {
+      "@type": "MedicalWebPage",
+      "name": "Doc Clinic Finder",
+      "url": "https://doc-clinicfinder.com"
+    },
+    {
+      "@type": "MedicalWebPage",
+      "name": "Obesitas Kliniek Turkije",
+      "url": "https://obesitas-kliniek-turkije.nl"
+    },
+    {
+      "@type": "MedicalWebPage",
+      "name": "Schlauchmagen Antalya",
+      "url": "https://schlauchmagen-antalya.com"
+    },
+    {
+      "@type": "MedicalWebPage",
+      "name": "Obesity Clinic Turkey",
+      "url": "https://obesity-clinic-turkey.com"
+    },
+    {
+      "@type": "MedicalWebPage",
+      "name": "Turkije Maagverkleining",
+      "url": "https://turkije-maagverkleining.nl"
+    }
+  ]
+}
+</script>
 </head>
 <body class="bg-[#e6f5ea] text-[#064c26] font-sans">
 
@@ -301,15 +357,16 @@
 
   <!-- Popular Websites Row -->
   <div class="max-w-6xl mx-auto px-4 md:px-6 mt-8">
-    <h4 class="text-xl font-bold mb-4 border-b border-green-400 inline-block pb-1">Popular Websites</h4>
+    <h4 class="text-xl font-bold mb-4 border-b border-green-400 inline-block pb-1">Information Websites</h4>
     <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-2 text-[#e6f5ea]">
       <li><a href="https://internationalesthetic.net" target="_blank" rel="follow" class="hover:text-green-400 transition">internationalesthetic.net</a></li>
-      <li><a href="https://dentalimplantsclinicturkey.com" target="_blank" rel="follow" class="hover:text-green-400 transition">dentalimplantsclinicturkey.com</a></li>
+      <li><a href="https://hairestetikturkey.com" target="_blank" rel="follow" class="hover:text-green-400 transition">hairestetikturkey.com</a></li>
       <li><a href="https://antalyainternationaldentistry.com" target="_blank" rel="nollow" class="hover:text-green-400 transition">antalyainternationaldentistry.com</a></li>
       <li><a href="https://obesitas-kliniek-turkije.nl" target="_blank" rel="nollow" class="hover:text-green-400 transition">obesitas-kliniek-turkije.nl</a></li>
       <li><a href="https://bakirkoycheckupmerkezi.com" target="_blank" rel="follow" class="hover:text-green-400 transition">bakirkoycheckupmerkezi.com</a></li>
       <li><a href="https://doc-clinicfinder.com" target="_blank" rel="follow" class="hover:text-green-400 transition">doc-clinicfinder.com</a></li>	
-	  <li><a href="https://obesity-clinic-turkey.com" target="_blank" rel="follow" class="hover:text-green-400 transition">obesity-clinic-turkey.com</a></li>		
+	  <li><a href="https://obesity-clinic-turkey.com" target="_blank" rel="follow" class="hover:text-green-400 transition">obesity-clinic-turkey.com</a></li>	
+	  <li><a href="https://medicalparktv.com" target="_blank" rel="follow" class="hover:text-green-400 transition">medicalparktv.com</a></li>			
     </ul>
   </div>
 
