Update link for hairestetikturkey.com

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     <h4 class="text-xl font-bold mb-4 border-b border-green-400 inline-block pb-1">Information Websites</h4>
     <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-2 text-[#e6f5ea]">
       <li><a href="https://internationalesthetic.net" target="_blank" rel="follow" class="hover:text-green-400 transition">internationalesthetic.net</a></li>
-      <li><a href="https://hairestetikturkey.com" target="_blank" rel="follow" class="hover:text-green-400 transition">hairestetikturkey.com</a></li>
+      <li><a href="http://domain.vsw.jp/hairestetikturkey.com" target="_blank" rel="follow" class="hover:text-green-400 transition">hairestetikturkey.com</a></li>
       <li><a href="https://antalyainternationaldentistry.com" target="_blank" rel="nollow" class="hover:text-green-400 transition">antalyainternationaldentistry.com</a></li>
       <li><a href="https://obesitas-kliniek-turkije.nl" target="_blank" rel="nollow" class="hover:text-green-400 transition">obesitas-kliniek-turkije.nl</a></li>
       <li><a href="https://bakirkoycheckupmerkezi.com" target="_blank" rel="follow" class="hover:text-green-400 transition">bakirkoycheckupmerkezi.com</a></li>
