--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-2 text-[#e6f5ea]">
       <li><a href="https://internationalesthetic.net" target="_blank" rel="follow" class="hover:text-green-400 transition">internationalesthetic.net</a></li>
       <li><a href="http://domain.vsw.jp/hairestetikturkey.com" target="_blank" rel="follow" class="hover:text-green-400 transition">hairestetikturkey.com</a></li>
-      <li><a href="https://antalyainternationaldentistry.com" target="_blank" rel="nollow" class="hover:text-green-400 transition">antalyainternationaldentistry.com</a></li>
+      <li><a href="https://medicalpark.site" target="_blank" rel="nollow" class="hover:text-green-400 transition">medicalpark.site</a></li>
       <li><a href="https://obesitas-kliniek-turkije.nl" target="_blank" rel="nollow" class="hover:text-green-400 transition">obesitas-kliniek-turkije.nl</a></li>
       <li><a href="https://bakirkoycheckupmerkezi.com" target="_blank" rel="follow" class="hover:text-green-400 transition">bakirkoycheckupmerkezi.com</a></li>
       <li><a href="https://doc-clinicfinder.com" target="_blank" rel="follow" class="hover:text-green-400 transition">doc-clinicfinder.com</a></li>	
